Fixed styling on mobile item list editing

--- a/app/assets/stylesheets/mobile-list.css.scss
+++ b/app/assets/stylesheets/mobile-list.css.scss
@@ -114,6 +114,7 @@
 							  &:focus,
 							  &:hover {
 								text-decoration: none;
+								background-color: transparent;
 							  }
 							}
 
@@ -147,11 +148,13 @@
 
 					  .nav-drop {
 						width: 100%;
+						min-width: 25px;
 
 						> li {
-							padding-left: 10px;
+							padding-left: 0;
 						    padding-right: 10px;
 						  	display: block;
+
 						}
 					  }
 					}
@@ -323,6 +326,146 @@
 
 						.prod-desc {
 							padding-left: 86px;
+
+							.prod-note {
+
+							  .prod-note-input {
+
+								textarea {
+								  margin: 0;
+								  width: 95%;
+								}
+							  }
+							}
+
+						  .prod-when-own {
+
+							.price {
+							  width: 105%;
+
+							  input.list-item-price {
+								width: 99%;
+							  }
+							}
+
+							.when,
+							.own {
+							  padding-right: 0;
+							  width: 105%;
+							  margin-bottom: 5px;
+
+							  .choicedrop {
+								width: 30%;
+								margin-left: 5px;
+								line-height: 1.2em;
+								border-radius: 4px;
+								padding: 4px 5px;
+								background-color: #ffffff;
+
+								> ul {
+								  width: 80% !important;
+								}
+
+								.ss-dropdown {
+								  float: right;
+								}
+							  }
+							}
+
+						  }
+
+						}
+
+					  	.prod-desc.editing {
+
+						  .prod-category {
+							display: none;
+						  }
+
+						  .field-prodname {
+							width: 86%;
+							border-radius: 3px 0 0 3px;
+						  }
+
+						  .prod-when-own {
+
+							.price {
+								width: 105%;
+
+							 input.list-item-price {
+								width: 99%;
+							 }
+							}
+
+							.when {
+							  padding-right: 0;
+							  width: 105%;
+
+							  .choicedrop {
+								width: 83%;
+								line-height: 1.2em;
+								font-size: 1.3em;
+								border-radius: 4px;
+								padding: 5px 0;
+								font-weight: 300;
+								background-color: #fff;
+								margin-left: 0;
+
+								> ul {
+								  width: 90% !important;
+								}
+
+								.ss-dropdown {
+								  float: right;
+								}
+							  }
+							}
+
+							.own {
+							  padding-right: 0;
+							  width: 105%;
+							  margin-bottom: 5px;
+
+							  .choicedrop {
+								width: 82.5%;
+								line-height: 1.2em;
+								font-size: 1.3em;
+								border-radius: 4px;
+								padding: 5px 0;
+								font-weight: 300;
+								background-color: #fff;
+								margin-left: 8px;
+
+								> ul {
+								  width: 90% !important;
+								}
+
+								.ss-dropdown {
+								  float: right;
+								}
+							  }
+							}
+						  }
+
+						  .button {
+
+							&.find-item {
+							  display: inline-block;
+							  width: 14%;
+							  min-width: 10px;
+							  margin-left: -5px;
+							  border-radius: 0 3px 3px 0;
+							  padding: 3.9px 12px;
+							}
+						  }
+
+						  .progress-container {
+
+							.bt-thumb-upload {
+							  width: 60px;
+							  margin-top: -15px;
+							}
+						  }
 						}
 
 						.prod-thumb,
@@ -419,6 +562,25 @@
 							padding: 15px 12px;
 							font-size: 14px;
 						  	margin-bottom: 5px;
+						    background-color: transparent;
+						  	color: #bbb;
+						  	@include transition(background-color 0.3s linear);
+
+						  &:hover,
+						  &:focus {
+							color: #ffffff;
+						  }
+
+						  &.bt-color {
+							color: rgb(107, 179, 110);
+
+							&:hover,
+							&:focus {
+							  background-color: rgb(107, 179, 110) !important;
+							  border-color: rgb(107, 179, 110) !important;
+							  color: #ffffff;
+							}
+						  }
 						}
 					}
 
@@ -775,6 +937,10 @@
 								line-height: 1rem;
 								/*height: auto;
 								width: 110px;*/
+
+							  	.ss-plus {
+								  display: none;
+								}
 							}
 						}
 
